--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -290,7 +290,7 @@ const sections = [
                 <div class="bottomtext">
                     <p>We Are Hiring !</p>
                     <span class="mt-24 text-center text-md">We are always on the lookout for passionate, talented individuals to join our dynamic team! If you're eager to make an impact, innovate, and grow in a collaborative environment, we want to hear from you. Explore our current job openings and take the first step toward an exciting career with us. Your next opportunity could be just a click away!</span>
-                    <a href="/company/#form" class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#ff6d00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Contact to Apply</a>
+                    <a href="mailto:hello@cxpoint.co.uk" class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#ff6d00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Contact to Apply</a>
                 </div> 
             </div>
             <div id="custom-cursor-product"></div>
