--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -53,7 +53,7 @@ import { carouselData } from "../../data/carouselData.js";
                                         {slide.title}
                                     </div>
                                     <div class="flex items-center justify-start gap-4 leading-[100%]">
-                                        <img src={slide.authorImage} alt="author" class="lg:w-[4rem] w-[2rem] h-auto rounded-full"/>
+                                        {/* <img src={slide.authorImage} alt="author" class="lg:w-[4rem] w-[2rem] h-auto rounded-full"/> */}
                                         <div class="flex flex-col items-start justify-center">
                                             <p class="font-bold text-sm lg:text-base">{slide.authorName}</p>
                                             <p class="text-sm font-bold text-[#ADADAD]">{slide.authorRole}</p>
