--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import ContactForm from '../components/ContactForm.astro';
 						</div>
 						<div class="w-full h-full overflow-hidden">
 							<p class="text-white new font-semibold text-[1.6rem] md:text-[3.8rem] animated-text test ">
-								responsibly across Cloud Contact Centres Platform using Agnetic AI
+								responsibly across Cloud Contact Centres Platform using Agentic AI
 							</p>
 						</div>
 						<div class="w-full h-full overflow-hidden mt-20 md:mt-2 py-4 hidden md:flex ">
