--- a/src/pages/cookiepreferences/index.astro
+++ b/src/pages/cookiepreferences/index.astro
@@ -31,7 +31,7 @@ const cookieCategories = [
                 <!-- Header Section -->
                 <div class="mb-12 md:mb-16 pt-20">
                     <h1 class="text-4xl md:text-7xl font-bold mb-6 new text-center">Cookie Preferences</h1>
-                    <p class="text-gray-600 mb-4 lg:mt-20">Last Updated: March 15, 2024</p>
+                    <p class="text-gray-600 mb-4 lg:mt-20">Last Updated: Jan, 2025</p>
                     <p class="text-lg leading-relaxed">
                         We provide you with the option to manage the cookies that are set on your device while using our website. 
                         By managing your cookie preferences, you can control the types of cookies that are used during your browsing session.
