--- a/src/components/BrandFeatures.astro
+++ b/src/components/BrandFeatures.astro
@@ -12,7 +12,7 @@ const brandingFeatures = [
             "Bulk flow uploads directly to cloud​",
             "Call and workflow comparison, call flow journey mapping",
             "Prompt transcribe and verbiage management",
-            "Prompt migration from legacy to Genesys cloud​"
+            "Prompt migration from legacy to Genesys cloud​",
         ]
     },
     {
@@ -27,7 +27,7 @@ const brandingFeatures = [
                 "GDPR compliant",
             "Platform Uptime status and monitoring",
             "Dashboard and reporting, Nexa workspace Management",
-            "Help documentation"
+            "Help documentation",
         ]
     },
     {
