--- a/src/components/StackingCardsHero.astro
+++ b/src/components/StackingCardsHero.astro
@@ -33,7 +33,7 @@ import * as Icon from '@astropub/icons'
   </section>
 
   <section class="footer">
-    <!-- <h1>Footer</h1> -->
+    <h1>We Embrace <br />Artificial Intelligence</h1>
   </section>
 </div>
 
@@ -122,11 +122,23 @@ import * as Icon from '@astropub/icons'
         }
     }
 
-    .footer h1 {
-        font-size: 48px;
-        font-weight: 400;
-        letter-spacing: -2px;
+    .footer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+    
+    .footer h1{
+        width: 100%;
+        font-family: 'MediaanItalic';
+        text-align: center;
+        font-weight: 400;
+        font-size: 150px;
+        color: #1E1E1D;
+        letter-spacing: -8px;
+        line-height: 90%;
+    }
+
 </style>
 
 <script>
