Help section template

--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -8,6 +8,7 @@ import articles from "../../data/articleData.js";
 import Footer from "../../components/Footer.astro";
 import { Image } from 'astro:assets'
 import { carouselData } from "../../data/carouselData.js";
+import Help from "../../components/Help.astro";
 ---
 
 <Layout title="CX-Point">
@@ -119,6 +120,7 @@ import { carouselData } from "../../data/carouselData.js";
                 ))}
             </div>
         </div>
+        <Help />
         <Footer/>
     </div>
 </Layout>
